--- a/bilibili-lite/src/account/index.styl
+++ b/bilibili-lite/src/account/index.styl
@@ -6,3 +6,7 @@
   /* 我的勋章与实名认证 */
   @import 'site'
 }
+@-moz-document url-prefix("https://www.bilibili.com/account/history") {
+  /* 观看历史 */
+  @import 'history'
+}
