--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -55,6 +55,8 @@ em:not(.icon)
 .review-list-wrp li .review-title .review-spoiler
 .misl-ep-item .mark-icon.badge-pink
 .project-list .project-list-item .promo-item
+.type-label
+.history-list .cover-contain .label
   border 0 !important
   background-color var(--c-accent) !important
   color var(--c-white) !important
@@ -166,6 +168,7 @@ textarea
 .modal-wrapper
 .share-module .share-list .weixin-share-modal
 .selector-wrapper .more-type-wrapper
+.history-dlg
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
