--- a/bilibili-lite/src/public/feed.styl
+++ b/bilibili-lite/src/public/feed.styl
@@ -55,6 +55,7 @@
 .card-content .deleted
 .bg-white
 .shop-panel .shop-list
+.bangumi-container
   border-color var(--c-border) !important
   background-color var(--c-hover) !important
 
