--- a/bilibili-lite/src/t/base.styl
+++ b/bilibili-lite/src/t/base.styl
@@ -24,6 +24,7 @@
 .emoji-cover.selected
 .emoji-cover:hover
 .bp-input .content-box
+.imagesbox .boost-img
   background-color var(--c-hover) !important
 
 .bp-input .content-box input
@@ -58,6 +59,7 @@
   border-color var(--c-border) !important
 
 .tab-wrap .tab-item.active
+.imagesbox .boost-slider-wrap .boost-slider-border
   border-color var(--c-accent) !important
 
 .home-page .home-container .home-content .center-panel .section-block
@@ -110,6 +112,9 @@
 
 .toolbar .box-toggle
 .bp-add-button
+.imagesbox .boost-img .prev
+.imagesbox .boost-img .next
+  border 0 !important
   background-color transparent !important
   color var(--c-text) !important
 
