--- a/bilibili-lite/src/live/header.styl
+++ b/bilibili-lite/src/live/header.styl
@@ -62,8 +62,12 @@
   background-size 30px !important
 
 .link-navbar .left-part>.dp-table-cell
+  display block
   width 36px
   white-space nowrap
+
+.link-navbar .left-part>.dp-table-cell .nav-items-ctnr
+  transform translateY(-100%)
 
 .link-navbar .left-part>.dp-table-cell .nav-items-ctnr a
   display inline-block
@@ -81,6 +85,9 @@
 
 .link-navbar .left-part>.dp-table-cell:hover
   width auto
+
+.link-navbar .left-part>.dp-table-cell:hover .nav-items-ctnr
+  transform translateY(0)
 
 .link-navbar .left-part>.dp-table-cell:hover .nav-items-ctnr a
   opacity 1
