--- a/bilibili-lite/src/live/home.styl
+++ b/bilibili-lite/src/live/home.styl
@@ -22,6 +22,8 @@
 	background-color var(--c-hover) !important
 
 .bilibili-live-player[data-player-type='player-home'] .bilibili-live-player-enter-tips:hover
+.blp-red-tip:after
+.living-icon-col
 	background-color var(--c-accent) !important
 
 .notice-item .notice-main .notice-title
@@ -48,11 +50,17 @@
 	color var(--c-white) !important
 
 .bilibili-live-player[data-player-type='player-home'] .bilibili-live-player-enter-tips
+.item-border
 	border-color var(--c-accent) !important
+
+.aside-item:after
+	border-right-color var(--c-accent) !important
+
+.highlight-area-item
+	box-shadow none !important
 
 .bilibili-live-player button
 .live-player-ctnr button
-.awarding-panel button
 .search-bar-ctnr .search-bar .search-btn
 .link-panel-ctnr .load-more .load-more-btn
 .attention-live .switch-btn
