--- a/bilibili-lite/src/live/header.styl
+++ b/bilibili-lite/src/live/header.styl
@@ -24,7 +24,10 @@
 .divider
   background-color var(--c-border) !important
 
-.shortcuts-ctnr .shortcut-item .list-item span
+.nav-ctnr .link-navbar .shortcuts-ctnr .shortcut-item .list-item span
+.live-room-app .link-navbar .shortcuts-ctnr .shortcut-item .list-item span
+.nav-ctnr .link-navbar .nav-item span
+.live-room-app .link-navbar .nav-item span
   color var(--c-white) !important
 
 .info-item-ctnr
@@ -47,9 +50,21 @@
   color var(--c-white) !important
 
 .link-navbar
+  border-bottom 1px solid var(--c-border)
+  background-color var(--c-background) !important
+  box-shadow none !important
+
+.nav-ctnr .link-navbar
+.live-room-app .link-navbar
   box-shadow none !important
   background-color var(--c-bg-header) !important
   backdrop-filter blur(5px) !important
+
+.area-list-panel
+.link-panel-ctnr
+.calendar-checkin
+  border 1px solid var(--c-border)
+  border-top-width 0
 
 .search-bar-ctnr .search-bar
   border 0 !important
