--- a/bilibili-lite/src/live/home.styl
+++ b/bilibili-lite/src/live/home.styl
@@ -65,6 +65,7 @@
 .link-panel-ctnr .load-more .load-more-btn
 .attention-live .switch-btn
 	background-color transparent !important
+	color var(--c-text) !important
 
 	&::after
 		content none !important
