--- a/bilibili-lite/src/live/link.styl
+++ b/bilibili-lite/src/live/link.styl
@@ -55,6 +55,7 @@ div.mce-edit-area
   color var(--c-text) !important
 
 .tabnav-tip
+.page-title .count
   color var(--c-white) !important
 
 .icon-edit
@@ -109,10 +110,6 @@ div.mce-edit-area
 .rhythm-storm .dp-i-block button
 .fans-medal .inline button
   vertical-align middle
-
-.link-navbar
-  border-bottom 1px solid var(--c-border)
-  background-color var(--c-background) !important
 
 .side-bar
   width 160px
