--- a/bilibili-lite/src/live/list.styl
+++ b/bilibili-lite/src/live/list.styl
@@ -23,6 +23,8 @@
 .top3 .content-detail>p>span
 .rank-detail dd .score span
 .rank-detail dd .score span:hover
+.tag span
+.tag:hover span
   color var(--c-text) !important
 
 .rank-detail dt .rank-number
@@ -42,6 +44,9 @@
 
 .wrapper .content .state-null>.txt
   display inline-block
+
+.main-content .main-container
+  padding-top 60px
 
 .main-ctnr .content-ctn .header
   padding-top 80px
