--- a/bilibili-lite/src/manga/header.styl
+++ b/bilibili-lite/src/manga/header.styl
@@ -19,6 +19,10 @@
 .search-bar .search-input
   background-color transparent !important
 
+nav.manga-navbar.p-fixed.p-zero a button
+nav.manga-navbar.p-fixed.p-zero a button span
+  color var(--c-white) !important
+
 .manga-navbar
   box-shadow none !important
   background-color var(--c-bg-header) !important
@@ -88,6 +92,9 @@
 
 .nav-list .nav-item
   background-color transparent !important
+
+  span
+    color var(--c-title) !important
 
   &::after
     content none !important
