--- a/bilibili-lite/src/member/base.styl
+++ b/bilibili-lite/src/member/base.styl
@@ -55,6 +55,7 @@
 .qa-area-ol-wrp
 #edit-page .edit-notice
 .cover-upload-box .no-img:hover
+.tips-calendar_wrap
   background-color var(--c-hover) !important
 
 .dc-progress-bar
@@ -116,6 +117,7 @@
 .protect-apply-entry-wrp .protect-appeal
 .lab-item .lab-item-content .content-detail .detail-desc
 .lab-item .lab-item-content .content-detail .feedback
+.mobile-award-panel .content-container .install-text
   color var(--c-text) !important
 
 .link-top-container .link-top-item.active .red_point
@@ -187,6 +189,8 @@ i.icon-shape:after
 .read-list-component .creat-read-list-box .add-btn
 .footer-content
 #edit-page .edit-notice
+.line-divid
+.tips-calendar_wrap
   border-color var(--c-border) !important
 
 .recent-danmu-wrp .danmu-filter .left .option-menu .option-arrow-border
