--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -92,7 +92,7 @@ button
 .promo-btn
 .confirm-paybtn.active
 .searchBtn
-.sure
+.hsbtn .sure
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
@@ -201,7 +201,7 @@ button
 .submit-comment.no-login
 .confirm-paybtn
 .err-jump-btn
-.cancel
+.hsbtn .cancel
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
