--- a/bilibili-lite/src/public/comment.styl
+++ b/bilibili-lite/src/public/comment.styl
@@ -73,6 +73,7 @@
 .bb-comment .stick.true-love .medal-level
 .comment-bilibili-fold .stick.true-love .medal-level
 .list-comment
+.panel-area .bb-comment .bottom-page.center
 	border-color var(--c-border) !important
 
 .comment .comment-selecotr
