--- a/bilibili-lite/src/public/feed.styl
+++ b/bilibili-lite/src/public/feed.styl
@@ -56,6 +56,7 @@
 .bg-white
 .shop-panel .shop-list
 .bangumi-container
+.live-container
   border-color var(--c-border) !important
   background-color var(--c-hover) !important
 
