--- a/bilibili-lite/src/t/base.styl
+++ b/bilibili-lite/src/t/base.styl
@@ -25,6 +25,7 @@
 .emoji-cover:hover
 .bp-input .content-box
 .imagesbox .boost-img
+.img-content
   background-color var(--c-hover) !important
 
 .bp-input .content-box input
