--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -36,6 +36,9 @@
 .bui-slider .bui-track.bui-track-video-progress .bui-bar-wrap .bui-bar-buffer
 	background-color var(--c-border) !important
 
+.bilibili-player em
+	background-color transparent !important
+
 .bui-slider .bui-track .bui-bar-wrap .bui-bar
 .bui-slider .bui-track .bui-thumb .bui-thumb-dot
 .bui-radio.bui-dark .bui-radio-button .bui-radio-input:checked+.bui-radio-label
