--- a/bilibili-lite/src/account/history.styl
+++ b/bilibili-lite/src/account/history.styl
@@ -14,6 +14,8 @@
 .history-wrap .b-head .b-head-t
   color var(--c-title) !important
 
+.nav-link-item .link
+.mini-upload
 .nav-user-center .user-con .item .name
   color var(--c-white) !important
 
