--- a/bilibili-lite/src/home/header.styl
+++ b/bilibili-lite/src/home/header.styl
@@ -3,7 +3,7 @@
 	background-color var(--c-bg-header)
 	backdrop-filter blur(5px)
 
-.nav-link-item .link
+.international-home .nav-link-item .link
 .mini-header .nav-user-center .nav-item a
 .mini-header input
 .international-home .mini-header .mini-upload
@@ -13,7 +13,7 @@
 .mini-header .nav-user-center .nav-item a:hover
 .international-home .bili-header-m .nav-search .nav-search-btn:hover
 .international-home .international-header .nav-search .nav-search-btn:hover
-.nav-link .nav-link-ul .nav-link-item .link:hover
+.international-home .nav-link .nav-link-ul .nav-link-item .link:hover
 	color var(--c-accent) !important
 
 .international-home .bili-header-m .nav-search-box
