--- a/bilibili-lite/src/manga/home.styl
+++ b/bilibili-lite/src/manga/home.styl
@@ -1,6 +1,7 @@
 /* 漫画主页 */
 .multi-line-text::before
 .multi-line-text::after
+.rank-list
   display none !important
 
 .vertical-block-card
@@ -37,6 +38,10 @@
   background-color var(--c-accent) !important
   color var(--c-white) !important
 
+.newbie-awarder .floating-button .widget-close-button img
+  border-radius 50%
+  background-color var(--c-border)
+
 .manga-navbar-history-list .action-button
 .manga-navbar-favourite-manga .action-button
 .search-bar .confirm-btn
@@ -47,9 +52,12 @@
 .newbie-awarder .close-button
 .user-panel .drop-list .logout-btn-container .logout-button
 .drop-list .more-btn-container .more-button
+.index-banner .control-button
 .index-banner .control-button .app-button
+.newbie-awarder .floating-button .widget-close-button
   border 0
   background-color transparent !important
+  color var(--c-title) !important
 
   &::after
     content none !important
